fix alerts positioned behind disabled input

--- a/src/stylings/index.scss
+++ b/src/stylings/index.scss
@@ -40,6 +40,7 @@ input[type="number"] {
   margin-right: auto;
   left: 0;
   right: 0;
+  z-index: 420;
 }
 
 // variables
